--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -175,6 +175,24 @@
   class = abbr
 }
 
+\DeclareAcronym{ptcp}{
+  short = \tsc{ptcp} ,
+  long  = participle ,
+  class = abbr
+}
+
+\DeclareAcronym{pret}{
+  short = \tsc{pret} ,
+  long  = preterite ,
+  class = abbr
+}
+
+\DeclareAcronym{opt}{
+  short = \tsc{opt} ,
+  long  = optative ,
+  class = abbr
+}
+
 
 \DeclareAcronym{ohg}{
   short = OHG ,
