--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -22,143 +22,70 @@ This can be reformulated as follows. In a competition, dative wins over accusati
 I start with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in accusative.
 
 Consider the example in \ref{ex:gothic-acc-dat-rep}, repeated from the introduction. In this example, the internal case is dative and the external case is accusative.
-The internal case is dative. The preposition \tit{ana} `on' takes dative complements.
-The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{n}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The internal case is dative. The preposition \tit{ana} `on' takes dative complements.\footnote{
+\tit{Ana} `on' takes dative complements when the PP is interpreted as locational. \tit{Ana} `on' takes accusative complements when the PP is interpreted as directional. \tit{Ana þammei} `on that' in \ref{ex:gothic-acc-dat-rep} refers to a location.
+}
+The external case is accusative. The predicate \tit{ushafjan} `to pick up' takes accusative objects.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{n}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case are unattested.
 
 \exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
- {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{n}.\ac{sg} -\ac{comp} lay\\
- `picking up (that) on what he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat-rep}
-
-%aiþþau ƕaiwa galaubjand þammei ni hausidedun
-% ei galeikai þammei drauhtinoþ
-
-
-% ushafjands
-% Present participle: Strong Masculine Nominative Singular
-% Lemma us-hafjan
-% `erheben'
-%
-% lag
-% Active Indicative Preterite 3rd Person Singular
-% Lemma ligan
-% `liegen'
+ {pick up}.\ac{pres}.\ac{ptcp}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{n} -\ac{comp} lie.\ac{pret}.3\ac{sg}\\
+ `picking up that what he lay on' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat-rep}
 
 Consider the example in \ref{ex:gothic-dat-acc-rep}, repeated from the introduction. In this example, the internal case is accusative and the external case is dative.
-The internal case is accusative. The predicate \tit{jains} `sent' takes accusative objects.
-The external case is dative. The predicate \tit{galaubjaiþ} `believe' takes dative objects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The internal case is accusative. The predicate \tit{insandjan} `to send' takes accusative objects.
+The external case is dative. The predicate \tit{galaubjan} `to believe' takes dative objects.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
 
 \exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
-that believe\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\tsc{comp} {sent}\scsub{[acc]} he\\
-`that you believe on (him) whom he has sent' \flushfill{Gothic, \ac{john} 6:29, my translation}\label{ex:gothic-dat-acc-rep}
-
-% Lemma ga-laubjan
-% 1. glauben 2. anvertrauen
-% Active Optative Present 2nd Person Plural
-%
-% Lemma in-sandjan
-% entsenden
-% Active Indicative Preterite 3rd Person Singular
-%
-% Lemma jains
-% Pronoun, demonstrative  jener
-% Strong Masculine Nominative Singular
+that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\tsc{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \tsc{dem}.\ac{nom}.3\ac{sg}.\ac{m}\\
+`that you believe in him whom he sent' \flushfill{Gothic, \ac{john} 6:29, my translation}\label{ex:gothic-dat-acc-rep}
 
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
 
 Consider the example in \ref{ex:gothic-dat-nom}, in which the internal case is dative and the external case is nominative.
-The internal case is dative. The predicate \tit{fraletada} `is forgiven' takes dative objects.
-The external case is nominative. The predicate \tit{frijod} `loves' takes nominative subjects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The internal case is dative. The predicate \tit{fraletan} `to forgive' takes dative objects.
+The external case is nominative. The predicate \tit{frijon} `to love' takes nominative subjects.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
- but \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} little {is forgiven}\scsub{[dat]} little loves\scsub{[nom]}\\
+ but \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love.?.\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-dat-nom}
 
-% Lemma leitils
-% klein, wenig
-% Strong Neuter Nominative Singular
-% Strong Neuter Accusative Singular
-%
-% Lemma fra-letan
-% lassen; frei lassen, entlassen; unterlassen; zulassen, erlauben; erlassen, vergeben; herablassen
-% Passive Indicative Present 1st Person Singular
-% Passive Indicative Present 3rd Person Singular
-%
-% frijod: ??
-
 Consider the example in \ref{ex:gothic-nom-dat}, in which the internal case is nominative and the external case is dative.
-The internal case is nominative. The predicate \tit{sind fraþjaiþ} `are above' takes a nominative subject.
-The external case is dative. The predicate \tit{fraþjaiþ} `think on' takes dative indirect objects.
+The internal case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects.
+The external case is dative. The predicate \tit{fraþjan} `to think about' takes dative indirect objects.
 The relative pronoun \tit{þaim} `\ac{rel}.\ac{dat}.\ac{pl}.\ac{n}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
 
 \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
- \ac{rel}.\ac{dat}.\ac{pl}.\ac{n} -\ac{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
- `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-nom-dat}
-
-% Lemma iupa
-% oben
-%
-% Lemma wisan
-% sein
-% Active Indicative Present 3rd Person Plural
-%
-% Lemma fraþjan
-% 1. denken 2. erkennen, verstehn 3. verständig sein
-% Active Optative Present 2nd Person Plural
+ \ac{rel}.\ac{dat}.\ac{pl}.\ac{n} -\ac{comp} above be.\ac{pres}.3\ac{pl}\scsub{[nom]} {think about}.\tsc{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]}\\
+ `think about those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-nom-dat}
 
 I end with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
 
 Consider the example in \ref{ex:gothic-acc-nom}, in which the internal case is accusative and the external case is nominative.
-The internal case is accusative. The predicate \tit{frijos} `love' takes accusative objects.
-The external case is nominative. The predicate \tit{siuks ist} `is sick' takes nominative subjects.
-The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The internal case is accusative. The predicate \tit{frijon} `to love' takes accusative objects.
+The external case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects.
+The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
- \ac{rel}.\ac{acc}.\ac{m}.\ac{sg} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
+ \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
 
-% Lemma frijon
-% lieben
-% Active Indicative Present 2nd Person Singular
-%
-% Lemma siuks
-% krank, schwach
-% Strong Masculine Nominative Singular
-%
-% Lemma wisan
-% sein, dasein, existieren
-% Active Indicative Present 3rd Person Singular
-
 Consider the example in \ref{ex:gothic-nom-acc}, in which the internal case is nominative and the external case is accusative.
-The internal case is nominative. The predicate \tit{ist us Laudeikaion} `is from Laodicea' takes nominative subjects.
-The external case is accusative. The predicate \tit{ussiggwaid} `read' takes accusative objects.
-The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{n}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The internal case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects.
+The external case is accusative. The predicate \tit{ussiggwan} `to read' takes accusative objects.
+The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{n}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
- and \ac{rel}.\ac{acc}.\ac{n}.\ac{sg} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
- `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
-
-% Lemma wisan
-% sein, dasein, existieren
-% Active Indicative Present 3rd Person Singular
-%
-% Lemma us +dat?
-% [m. Dat.] aus, von
-%
-% Lemma þu
-% du
-% Nominative Plural
-%
-% ussiggwaid
-% read? stem is ussiggw?
+ and \ac{rel}.\ac{acc}.\ac{sg}.\ac{n} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea you.\ac{pl} read.?.\scsub{[acc]}\\
+ `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
 
 A summary of the Gothic data as a whole is given in Table \ref{tbl:summary-gothic}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match.
 The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
@@ -192,16 +119,6 @@ Old High German is an example of a language that only allows the external case t
 This topic is the main focus of Part \ref{part:complexity} of this dissertation.}
 
 In the remainder of this chapter I show that headless relatives are not the only place where the case scale shows up. Instead, it appears with more syntactic phenomena. Moreover, exactly this scale is also reflected in morphology.
-
-% The nativeness of the headless relative constructions under
-% consideration, and in particular those represented by group (I), can be
-% established for the moment by citing instances in which they occur independently
-% of the Greek, e.g., in which the Gothic modified relative clause
-% reflects a Greek participial construction or a noun, or instances in which
-% 18
-% they occur in opposition to the Greek. Evidence of the first type is
-% found in Mk 10:32, Luk 3:13, Rom 14:19, II Cor 8:11, Col 3:2, and elsewhere.
-
 
 
 \section{In syntax}\label{sec:impl-hier}
@@ -247,20 +164,20 @@ Japanese is an example of a language that does not show any agreement on the pre
 
 German is an example of a language that shows agreement with the subject of the clause. An example is given in \ref{ex:german-agr}. The predicate \tit{gibst} `give' contains the morpheme \tit{-st}, marked in bold. This morpheme is the agreement morpheme for second person singular subjects (in the present tense). The predicate \tit{gibst} `give' agrees in person and number with the subject \tit{du} `you'. There is no agreement with the direct object \tit{das Buch} `the book' or the indirect object \tit{mir} `me'.
 
-\exg. Du gib \tbf{-st} mir das Buch.\\
- you give -2\ac{sg}.\ac{pres} me the book\\
+\exg. Du gib \tbf{-st} mir {das Buch}.\\
+ you.\ac{nom} give -\ac{pres}.2\ac{sg} I.\ac{dat} {the book.\ac{acc}}\\
  `You give me the book.' \flushfill{German}\label{ex:german-agr}
 
 Hungarian is an example of a language that shows agreement with the subject and the direct object of a clause. An example is given in \ref{ex:hungarian-agr}. The predicate \tit{adom} `give' contains the morpheme \tit{-om}, marked in bold. This is a portmonteau morpheme for a first person singular subject and a third person object agreement. The predicate \tit{adom} `give' agrees with the subject \tit{én} `I' and the direct object \tit{a könyvet} `the book'. There is no agreement with the indirect object \tit{neked} `you'. Agreement with the the first person singular subject \tit{én} `I' and second person singular indirect object \tit{neked} `you.\ac{dat}.\ac{sg}' is ungrammatical, as indicated by the ungrammaticality of \tit{-lak}.
 
-\exg. (Én) neked ad \tbf{-om}/ *-lak a könyv -et\\
- I you.\ac{dat}.\ac{sg} give -1\ac{sg}.\ac{subj}>3.\ac{obj} -1\ac{sg}.\ac{subj}>2.\ac{obj} the book -\ac{acc}\\
+\exg. (Én) neked ad \tbf{-om}/ *-lak a könyv-et\\
+ I you.\ac{dat} give -1\ac{sg}.\ac{subj}>3.\ac{obj} -1\ac{sg}.\ac{subj}>2.\ac{obj} the book-\ac{acc}\\
  `I give you the book.' \flushfill{Hungarian, András Bárány p.c.}\label{ex:hungarian-agr}
 
 Basque is an example of a language that shows agreement with the subject, the direct object and the indirect object. Basque is an ergative-absolutive language, so in transitive clauses subjects are marked as ergative and objects are marked as absolutive. An example from the Bizkaian dialect is given in \ref{ex:basque-agr}. The stem of the auxiliary \tit{aus} combines with the morphemes \tit{d-}, \tit{-ta} and \tit{-zu}, marked in bold. The morpheme \tit{d-} is the agreement morpheme for third person singular as direct objects, which is here \tit{liburua} `the book'. The morpheme \tit{-ta} is the agreement morpheme for first person singular indirect objects, which is here \tit{niri} `me'. The morpheme \tit{-zu} is the agreement morpheme for second person singular ergative subjects, which is here \tit{zuk} `you'.
 
 \exg. Zu-k ni-ri liburu-a emon \tbf{d} -aus \tbf{-ta} \tbf{-zu}.\\
- you-\ac{erg} me-\ac{dat} book-\ac{def}.\ac{abs} given \ac{abs}.3\ac{sg} -\ac{aux} -\ac{dat}.1\ac{sg} -\ac{erg}.2\ac{sg}\\
+ you-\ac{erg} I-\ac{dat} book-\ac{def}.\ac{abs} given \ac{abs}.3\ac{sg} -\ac{aux} -\ac{dat}.1\ac{sg} -\ac{erg}.2\ac{sg}\\
  `You gave me the book.' \flushfill{Bizkaian Basque, adapted from \pgcitealt{arregi2004}{45}}\label{ex:basque-agr}
 
 Putting the languages in \posscitet{moravcsik1978} figure gives the following result.
