--- a/variation.tex
+++ b/variation.tex
@@ -10,63 +10,63 @@ In \ac{mg}, only internal case can win.
 Internal is grammatical.
 
 Consider the example in \ref{ex:mg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
-The internal case is dative. The predicate \tit{vertraut} `trusts' takes dative objects.
-The external case is accusative. The predicate \tit{lade ein} `invite' takes accusative objects.
+The internal case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
+The external case is accusative. The predicate \tit{einladen} `to invite' takes accusative objects.
 The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
-I invite\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
-`I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
+`I invite whoever Maria also trusts.' \flushfill{adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
 
 Consider the example in \ref{ex:mg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
-The internal case is dative. The predicate \tit{vertraut} `trusts' takes dative objects.
-The external case is nominative. The predicate \tit{besucht} `visits' takes nominative subjects.
+The internal case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
+The external case is nominative. The predicate \tit{besuchen} `to visit' takes nominative subjects.
 The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. Uns besucht \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
-us visits\scsub{[nom]} \tsc{rel}.\ac{dat}.\tsc{an} Maria trusts\scsub{[dat]}\\
-`Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
+we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{dat}.\tsc{an} Maria.\ac{nom} trust.3\ac{sg}\scsub{[dat]}\\
+`Who visits us, Maria trusts.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
 
 Consider the example in \ref{ex:mg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
-The internal case is accusative. The predicate \tit{mag} `likes' takes accusative objects.
-The external case is nominative. The predicate \tit{besucht} `visits' takes nominative subjects.
+The internal case is accusative. The predicate \tit{mögen} `to like' takes accusative objects.
+The external case is nominative. The predicate \tit{besuchen} `to visit' takes nominative subjects.
 The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
- Us visits\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
- `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
+ we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
+ `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
 
 External is ungrammatical.
 
 Consider the example in \ref{ex:mg-dat-acc}. In this example, the internal case is accusative and the external case is dative.
-The internal case is accusative. The predicate \tit{mag} `likes' takes accusative objects.
-The external case is dative. The predicate \tit{vertraue} `trust' takes dative objects.
-The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The internal case is accusative. The predicate \tit{mögen} `to like' takes accusative objects.
+The external case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 This is ungrammatical in German: only the internal case can win.
 
 \exg. *Ich vertraue wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
-I trust\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria likes\scsub{[acc]}.\\
-`I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
+I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}.\\
+`I trust whoever Maria also likes.' \flushfill{adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
 
 Consider the example in \ref{ex:mg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
-The internal case is nominative. The predicate \tit{mag} `likes' takes nominative subjects.
-The external case is dative. The predicate \tit{vertraue} `trust' takes dative objects.
-The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The internal case is nominative. The predicate \tit{mögen} `to like' takes nominative subjects.
+The external case is dative. The predicate \tit{vertrauen} `to trust' takes dative objects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 This is ungrammatical in German: only the internal case can win.
 
 \exg. *Ich vertraue, wem \tbf{Hitchcock} \tbf{mag}.\\
-I trust\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} Hitchcock likes\scsub{[nom]}\\
-`I trust who likes Hitchcock.' \flushfill{\pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom}
+I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} Hitchcock.\ac{acc} like.3\ac{sg}\scsub{[nom]}\\
+`I trust who likes Hitchcock.' \flushfill{adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom}
 
 Consider the example in \ref{ex:mg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
-The internal case is nominative. The predicate \tit{mir sympathisch ist} `I like' takes nominative subjects.
-The external case is dative. The predicate \tit{vertraue} `trust' takes dative objects.
-The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the external case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The internal case is nominative. The predicate \tit{sein} `to be' takes nominative subjects.
+The external case is accusative. The predicate \tit{einladen} `to invite' takes accusative objects.
+The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 This is ungrammatical in German: only the internal case can win.
 
 \exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
-I invite\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} me nice is\scsub{[nom]}\\
-`I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom}
+I.\ac{nom} invite.1\ac{sg}\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} I.\ac{dat} nice be.3\ac{sg}\scsub{[nom]}\\
+`I invite who I like.' \flushfill{adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom}
 
 To summarize
 
@@ -110,7 +110,7 @@ To summarize
 \begin{itemize}
   \item when a language's light-headed relatives are \tsc{d} - \tsc{wh}, non-matching is never allowed
   \item with \tsc{wh} morphology, the internal case can win
-  \item with \tsc{d} morphology, the external case can win (or is it when the relative pronoun can take a complement)
+  \item with \tsc{d} morphology (or is it when the relative pronoun can take a complement), both the external and the internal can win
 \end{itemize}
 
 
@@ -284,3 +284,13 @@ Examples in which the internal case is nominative, the external case is accusati
  		  \bottomrule
  		\end{tabular}
  \end{table}
+
+
+ % The nativeness of the headless relative constructions under
+ % consideration, and in particular those represented by group (I), can be
+ % established for the moment by citing instances in which they occur independently
+ % of the Greek, e.g., in which the Gothic modified relative clause
+ % reflects a Greek participial construction or a noun, or instances in which
+ % 18
+ % they occur in opposition to the Greek. Evidence of the first type is
+ % found in Mk 10:32, Luk 3:13, Rom 14:19, II Cor 8:11, Col 3:2, and elsewhere.
