--- a/ohg-examples.tex
+++ b/ohg-examples.tex
@@ -14,6 +14,8 @@ ist za . . . der ni galaubit , daz imo
 
 \subsection{examples}
 
+
+
 internal: dat, external: nom?
 
 \exg. Ibu christus auur got ni uuari, \tbf{dhemu} \tbf{in} \tbf{psalmom} \tbf{chiquhedan} \tbf{uuard}\\
@@ -48,6 +50,41 @@ ich.SG.NOM.1 hervorbringen.IND.PRES.SG.1 von Jakob.SG.GEN Samuel.SG.DAT und von 
 \exg. Bis tú nu {zi wáre} furira Ábrahame ? ouh thén man hiar nu zálta\\
  sein du nun,jetzt wahrlich erhabener,wertvoller Abraham ? auch,und der,die,das man hier nun,jetzt erzählen,verkünden\\
  `xxx' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc}
+
+COUNTEREXAMPLE: int: nom, ext: acc
+
+\exg. tház	si	uns	béran	scolti	thér	unsih	gihéilti\\
+dass	sieFEM.SG.NOM.3	wirPL.DAT.1	(hervor)bringen,gebären	sollen,werdenSUBJ.PAST.SG.3	derMASC.SG.NOM	wirPL.ACC.1	rettenSUBJ.PAST.SG.3\\
+ `xxx' \flushfill{\ac{ohg}, \ac{otfrid}}
+
+ \exg. gébe themo	ni	éigi\\
+ gebenSUBJ.PRES.SG.3	derMASC.SG.DAT	nicht	haben,besitzenSUBJ.PRES.SG.3\\
+ `' \flushfill{\ac{ohg}, \ac{otfrid}}
+
+ internal: acc, external: nom
+
+ \exg. Thiz ist [then sie zellent].\\
+  this is whom(ACC) they talk\\
+  `This is the one whom they talk about.' \flushfill{\ac{ohg}, ?}
+
+  internal: nom, external: dat?
+
+  \exg. thia	láz	ih	themo	iz	lísit	thar\\
+  dieFEM.SG.ACC	lassenIND.PRES.SG.1	ichSG.NOM.1	derMASC.SG.DAT	esNEUT.SG.ACC.3	lesenIND.PRES.SG.3	da, dort\\
+  `I leave her to him who reads it' \flushfill{\ac{ohg}, \ac{otfrid}}
+
+
+?
+
+Al	io	súlicha	giwúrt	so	duat	thes	géistes	giburt	thén	zi	thiu	gigángent
+then = dative plural
+dative subject in embedded clause?
+
+internal: dat? external: nom?
+
+\exg. nist	themo	sér	bizeinit	noh	léides	wiht	giméinit\\
+nicht.seinIND_PRES_SG_3	derMASC_SG_DAT	Schmerz,Leid,Kummer,Unglück;SG_NOM Böses	bezeichnen,bestimmenIND_PRES_SG_3 und.nicht Leid,Schmerz,UnglückSG_GEN	Ding,etwasSG_NOM	sagen,meinen,bestimmenIND_PRES_SG_3\\
+  `' \flushfill{\ac{ohg}, \ac{otfrid}}
 
 
 \phantom{x}
