--- a/variation.tex
+++ b/variation.tex
@@ -122,7 +122,20 @@ works via attraction
 
 \subsection{\tsc{d} in Gothic}
 
-does not work via attraction, but complementizer(?)
+The construction is infrequent. Some combinations only have a single occurance (e.g. dat/nom), others have a few (e.g. nom/acc). The Corpus is xxx tokens etc.
+
+The description of the Gothic data is mostly based on \citealt{harbert1978}. The spelling (if differing) follows the Wulfila Project website.\footnote{
+<http://www.wulfila.be>
+} The glossing and translations are modified from \citeauthor{harbert1978}. The glossing follows the information on the Wulfila Project website. The translations are my own.
+
+\citet{harbert1978} reports that there is no example of dative/acc (he calls it indirect object/direct object). I looked for thammei, thaimei and thizaiei and came to the same conclusion. (fenna, je moet ook naar de accusatieven kijken natuurlijk..) Datives occur frequently with prepositions, there are only a few verbs that take datives.
+
+But looking at these prepositions also tells us something. There are instances in which an internal preposition takes dat and then an external predicate takes accusative. This also happens with the combinations x, y and z. There are no instances that go against the case scale. In this dissertation I try to further stay away from prepositions (why?), but I take this to mean that also prepositions follow the case scale.
+
+Therefore, I interpret the missing fully verbal dat/acc as a consequence of the infrequency of the construction itself and the infrequency of verbs taking dative. The system that I am setting up will be able to generate this instance.
+
+
+
 
 \section{\tsc{wh} in German}
 
