paar voorbeelden erbij

--- a/ohg-examples.tex
+++ b/ohg-examples.tex
@@ -61,12 +61,6 @@ dass	sieFEM.SG.NOM.3	wirPL.DAT.1	(hervor)bringen,gebären	sollen,werdenSUBJ.PAST
  gebenSUBJ.PRES.SG.3	derMASC.SG.DAT	nicht	haben,besitzenSUBJ.PRES.SG.3\\
  `' \flushfill{\ac{ohg}, \ac{otfrid}}
 
- internal: acc, external: nom
-
- \exg. Thiz ist [then sie zellent].\\
-  this is whom(ACC) they talk\\
-  `This is the one whom they talk about.' \flushfill{\ac{ohg}, ?}
-
   internal: nom, external: dat?
 
   \exg. thia	láz	ih	themo	iz	lísit	thar\\
@@ -85,6 +79,21 @@ internal: dat? external: nom?
 \exg. nist	themo	sér	bizeinit	noh	léides	wiht	giméinit\\
 nicht.seinIND_PRES_SG_3	derMASC_SG_DAT	Schmerz,Leid,Kummer,Unglück;SG_NOM Böses	bezeichnen,bestimmenIND_PRES_SG_3 und.nicht Leid,Schmerz,UnglückSG_GEN	Ding,etwasSG_NOM	sagen,meinen,bestimmenIND_PRES_SG_3\\
   `' \flushfill{\ac{ohg}, \ac{otfrid}}
+
+
+
+internal: acc, external: nom
+
+\exg. thíz	ist	then	sie	zéllent	joh	then	sie	sláhan	wollent	!\\
+diesesNEUT_SG_NOM	seinIND_PRES_SG_3	derMASC_SG_ACC	MASC_PL_NOM_3	erzählenIND_PRES_PL_3		und	derMASC_SG_ACC	MASC_PL_NOM_3	töten	wollenIND_PRES_PL_3\\
+
+hetzelfde als deze
+internal: acc, external: nom
+
+\exg. Thiz ist [then sie zellent].\\
+ this is whom(ACC) they talk\\
+ `This is the one whom they talk about.' \flushfill{\ac{ohg}, ?}
+
 
 
 \phantom{x}
