--- a/variation.tex
+++ b/variation.tex
@@ -122,20 +122,7 @@ works via attraction
 
 \subsection{\tsc{d} in Gothic}
 
-The construction is infrequent. Some combinations only have a single occurance (e.g. dat/nom), others have a few (e.g. nom/acc). The Corpus is xxx tokens etc.
-
-The description of the Gothic data is mostly based on \citealt{harbert1978}. The spelling (if differing) follows the Wulfila Project website.\footnote{
-<http://www.wulfila.be>
-} The glossing and translations are modified from \citeauthor{harbert1978}. The glossing follows the information on the Wulfila Project website. The translations are my own.
-
-\citet{harbert1978} reports that there is no example of dative/acc (he calls it indirect object/direct object). I looked for thammei, thaimei and thizaiei and came to the same conclusion. (fenna, je moet ook naar de accusatieven kijken natuurlijk..) Datives occur frequently with prepositions, there are only a few verbs that take datives.
-
-But looking at these prepositions also tells us something. There are instances in which an internal preposition takes dat and then an external predicate takes accusative. This also happens with the combinations x, y and z. There are no instances that go against the case scale. In this dissertation I try to further stay away from prepositions (why?), but I take this to mean that also prepositions follow the case scale.
-
-Therefore, I interpret the missing fully verbal dat/acc as a consequence of the infrequency of the construction itself and the infrequency of verbs taking dative. The system that I am setting up will be able to generate this instance.
-
-
-
+does not work via attraction, but complementizer(?)
 
 \section{\tsc{wh} in German}
 
@@ -238,6 +225,11 @@ Examples in which the internal case is nominative, the external case is accusati
 \exg. ih bibringu fona (iacobes samin endi) Iuda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
  I {bring to light}\scsub{[acc]} about (Jacob together end?) Judas \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
  `I bright to light the one who wanders through my mountains about Jacob and end of Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
+
+
+
+enti	gachaufta	den	Auh	ist	galiih	himilo	rihhi	seginun	in	seu	gasezziteru
+und	kaufenIND_PAST_SG_3		derMASC_SG_ACC		auch	seinIND_PRES_SG_3	gleich	HimmelPOS.PL_GEN	ReichSG_NOM		NetzSG_DAT		in	SeeSG_ACC		setzenP_POS_FEM_SG_DAT_ST
 
 
 
