--- a/ohg-examples.tex
+++ b/ohg-examples.tex
@@ -77,7 +77,7 @@ dative subject in embedded clause?
 internal: dat? external: nom?
 
 \exg. nist	themo	sér	bizeinit	noh	léides	wiht	giméinit\\
-nicht.seinIND_PRES_SG_3	derMASC_SG_DAT	Schmerz,Leid,Kummer,Unglück;SG_NOM Böses	bezeichnen,bestimmenIND_PRES_SG_3 und.nicht Leid,Schmerz,UnglückSG_GEN	Ding,etwasSG_NOM	sagen,meinen,bestimmenIND_PRES_SG_3\\
+nicht.seinIND.PRES.SG.3	derMASC.SG.DAT	Schmerz,Leid,Kummer,Unglück;SG.NOM Böses	bezeichnen,bestimmenIND.PRES.SG.3 und.nicht Leid,Schmerz,UnglückSG.GEN	Ding,etwasSG.NOM	sagen,meinen,bestimmenIND.PRES.SG.3\\
   `' \flushfill{\ac{ohg}, \ac{otfrid}}
 
 
@@ -85,7 +85,7 @@ nicht.seinIND_PRES_SG_3	derMASC_SG_DAT	Schmerz,Leid,Kummer,Unglück;SG_NOM Böse
 internal: acc, external: nom
 
 \exg. thíz	ist	then	sie	zéllent	joh	then	sie	sláhan	wollent	!\\
-diesesNEUT_SG_NOM	seinIND_PRES_SG_3	derMASC_SG_ACC	MASC_PL_NOM_3	erzählenIND_PRES_PL_3		und	derMASC_SG_ACC	MASC_PL_NOM_3	töten	wollenIND_PRES_PL_3\\
+diesesNEUT.SG.NOM	seinIND.PRES.SG.3	derMASC.SG.ACC	MASC.PL.NOM.3	erzählenIND.PRES.PL.3		und	derMASC.SG.ACC	MASC.PL.NOM.3	töten	wollenIND.PRES.PL.3\\
 
 hetzelfde als deze
 internal: acc, external: nom
