--- a/variation.tex
+++ b/variation.tex
@@ -2,6 +2,20 @@
 
 \chapter{The variation}
 
+I showed that headless relatives crosslinguistically make reference to the case scale. There is another aspect to headless relatives, however, which is not stable crosslinguistically. This is has to do with whether the case winning case in the competition is the internal or the external case.
+
+%then have a particular order with the variation
+
+Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization.
+
+People have also been describing it like this: formulation from Cinque in his book.
+
+If it does not come from the input, where does it come from? I claim that it comes from other properties of German (or another language).
+
+A similar avenue was pursued by \citealt{himmelreich2017}. She specific languages for having different types of agree (up, down) and different types of probes (active, non-active). Doing that, she successfully derived free relatives and parasitic gaps in different languages.
+The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Instead, I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. To be more specific, I decompose the relative pronouns, and I determine what parts of syntactic structure they correspond to. Having independently done that, I return to the headless relatives, and I derive the facts.
+
+
 
 \section{Only internal}
 
